# or_trajopt

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
src/or_trajopt/: __init__.py  constraints.py  planning.py
