<?xml version="1.0"?>
<package format="2">
  <name>or_trajopt</name>
  <version>1.0.0</version>
  <description>OpenRAVE prpy bindings for TrajOpt</description>
  <license>BSD</license>
  <url type="website">http://github.com/personalrobotics/or_trajopt</url>

  <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>libopenscenegraph</depend>
  <depend>openrave</depend>
  <depend>openrave_catkin</depend>
  <exec_depend>python-numpy</exec_depend>
</package>
